Update MinStack.java